connected all pages to myAccount

--- a/client/public/collections.html
+++ b/client/public/collections.html
@@ -15,12 +15,16 @@
 <body>
     <div class="container">
         <div class="navbar">
-            <img src="https://media.discordapp.net/attachments/879396594431180822/1028129197106941982/login.png", class="logo">
+            <p>
+                <a a href="home.html">
+                    <img src="https://media.discordapp.net/attachments/879396594431180822/1028129197106941982/login.png", class="logo">
+                </a>
+            </p>
             <nav>
                 <ul>
                     <li> <a href="home.html">Home</a></li>
                     <li> <a href="about.html">About</a></li>
-                    <li> <a href="">Collections</a></li>
+                    <li> <a href="myAccount">Collections</a></li>
                     <li> <a href="">My Account</a></li>
                 </ul>
             </nav>
