--- a/client/public/about.html
+++ b/client/public/about.html
@@ -13,13 +13,17 @@
 <body>
     <div class="container">
         <div class="navbar">
-            <img src="https://media.discordapp.net/attachments/879396594431180822/1028129197106941982/login.png", class="logo">
+          <p>
+            <a a href="home.html">
+                <img src="https://media.discordapp.net/attachments/879396594431180822/1028129197106941982/login.png", class="logo">
+            </a>
+          </p>
             <nav>
                 <ul>
                     <li> <a href="home.html">Home</a></li>
                     <li> <a href="">About</a></li>
                     <li> <a href="collections.html">Collections</a></li>
-                    <li> <a href="">My Account</a></li>
+                    <li> <a href="myAccount">My Account</a></li>
                 </ul>
             </nav>
             <img src="https://static.thenounproject.com/png/1074958-200.png", class="cart">
@@ -33,8 +37,18 @@
                 <div class="content">
                     <h1>About Us</h1>
                     <h2>Our Story</h2>
-                    <p>blahblahblahblahblahblahblhalbhlahblahlbhalbhalhblah
-                        we are da best the end :D 
+                    <p>
+                      We are mom+kids!
+                      Bekah is the mom!
+                      Tina and Maria are the children!!
+                      <p>
+                        This is the Ghibli Real Estate application.
+                        If you're a Ghibli enthusiast and want to immerse youself
+                        in the Ghibli real estates, then you're in the right place!!
+                        <p>
+                          uwu owo ^w^
+                        </p>
+                      </p>
                     </p>
                 </div>
             </div>
@@ -48,7 +62,6 @@
       <div class="container">
         <h2>Rebekah Lee</h2>
         <p class="title">Full Stack Developer / Project Manager</p>
-        <p>Some text that describes me lorem ipsum ipsum lorem. </p>
         <p>joeun514@ou.edu</p>
       </div>
     </div>
@@ -60,8 +73,7 @@
       <div class="container">
         <h2>Maria Doan</h2>
         <p class="title">Full Stack Developer / Back End Focus </p>
-        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-        <p>@example.com</p>       
+        <p>mariadoan247@ou.edu</p>       
       </div>
     </div>
   </div>
@@ -72,8 +84,7 @@
       <div class="container">
         <h2>Tina Nguyen</h2>
         <p class="title">Full Stack Developer / Front End Focus</p>
-        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-        <p>@example.com</p>
+        <p>tinannguyen@ou.edu</p>
       </div>
     </div>
     </div>
