--- a/client/public/home.html
+++ b/client/public/home.html
@@ -13,14 +13,17 @@
 <body>
     <div class="container">
         <div class="navbar">
-            <img src="https://media.discordapp.net/attachments/879396594431180822/1028129197106941982/login.png", class="logo">
+            <p>
+                <a a href="">
+                    <img src="https://media.discordapp.net/attachments/879396594431180822/1028129197106941982/login.png", class="logo">
+                </a>
+            </p>
             <nav>
                 <ul>
                     <li> <a href="">Home</a></li>
                     <li> <a href="about.html">About</a></li>
                     <li> <a href="collections.html">Collections</a></li>
-                    <li> <a href="">My Account</a></li>
-                    <li> <a href="">Logout</a></li>
+                    <li> <a href="myAccount">My Account</a></li>
                 </ul>
             </nav>
 
@@ -31,7 +34,7 @@
             <a href="" class="btn">2022 Houses</a>
             <h1>Welcome to the <br> Studio Ghibli Real Estate</h1>
             <p>Immerse in the real estate of the Ghibli Universe!</p>
-            <a href="" class="hero-btn">Click to explore Ghibli Houses!</a>
+            <a href="collections.html" class="hero-btn">Click to explore Ghibli Houses!</a>
         </div>
         
     </div>
