--- a/client/public/about.html
+++ b/client/public/about.html
@@ -11,6 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
+  <!-- Navigation Bar -->
     <div class="container">
         <div class="navbar">
           <p>
@@ -29,6 +30,7 @@
             <img src="https://static.thenounproject.com/png/1074958-200.png", class="cart">
         </div>
         
+        <!-- About -->
         <div class="wrapper">
             <div class="row">
                 <div class="image-section">
@@ -54,7 +56,7 @@
             </div>
         </div>
 
-
+<!-- Creator Info -->
 <div class="row">
   <div class="column">
     <div class="card">
