--- a/client/public/home.html
+++ b/client/public/home.html
@@ -11,6 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Navigation Bar -->
     <div class="container">
         <div class="navbar">
             <p>
@@ -29,12 +30,12 @@
 
             <img src="https://static.thenounproject.com/png/1074958-200.png", class="cart">
         </div>
-
+        
+        <!-- Main Content -->
         <div class="content">
-            <a href="" class="btn">2022 Houses</a>
+            <a href="collections.html" class="btn">2022 Houses</a>
             <h1>Welcome to the <br> Studio Ghibli Real Estate</h1>
             <p>Immerse in the real estate of the Ghibli Universe!</p>
-            <a href="collections.html" class="hero-btn">Click to explore Ghibli Houses!</a>
         </div>
         
     </div>
