--- a/client/public/collections.html
+++ b/client/public/collections.html
@@ -24,11 +24,11 @@
                 <ul>
                     <li> <a href="home.html">Home</a></li>
                     <li> <a href="about.html">About</a></li>
-                    <li> <a href="myAccount">Collections</a></li>
-                    <li> <a href="">My Account</a></li>
+                    <li> <a href="">Collections</a></li>
+                    <li> <a href="myAccount">My Account</a></li>
                 </ul>
             </nav>
-            <!-- Cart Icon-->
+            <!-- Cart Icon -->
             <i class='bx bx-cart' id="cart-icon"></i>
         </div>
             <!-- Cart -->
